--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<main class="container" style="margin-top: 70px;">
+<main class="container" style="margin-top: 70px">
   <h1>Ponyracer</h1>
+  <p>Welcome</p>
+  <p>sandbox app is running!</p>
 </main>
